fixed tiplayer z-index issue.

--- a/src/css/TipLayer.less
+++ b/src/css/TipLayer.less
@@ -18,7 +18,7 @@
 
 .@{ui-class-prefix}-tiplayer {
     padding: @esui-tiplayer-padding;
-    z-index: @esui-tiplayer-zIndex;
+    z-index: @esui-tiplayer-zIndex !important;
     position: absolute;
     display: block;
     .esui-border-radius(
